...
                          _buildInfoChip(context, Icons.location_on, data.city, colorScheme.primary),
                        ],
                      ),
                      const SizedBox(height: 16),
                      _buildInfoChip(context, Icons.home_rounded, data.address, colorScheme.primary),
                      const SizedBox(height: 16),
                      Text("About", style: textTheme.titleLarge?.copyWith(fontWeight: FontWeight.bold)),
                      const SizedBox(height: 8),
                      Text(data.description, style: textTheme.bodyMedium, textAlign: TextAlign.justify),
                      const SizedBox(height: 16),
                      Divider(color: colorScheme.outlineVariant),
                      const SizedBox(height: 16),
                      Text("Menus", style: textTheme.headlineSmall?.copyWith(fontWeight: FontWeight.bold)),
                      const SizedBox(height: 16),
                      Text("Foods", style: textTheme.titleMedium),
                      const SizedBox(height: 8),
                      _buildHorizontalMenu(data.menus.foods),
                      const SizedBox(height: 16),
                      Text("Drinks", style: textTheme.titleMedium),
...
