...
    return Scaffold(
      body: Consumer<RestaurantProvider>(
        builder: (context, provider, child) {
          return CustomScrollView(
            slivers: [
              const SliverAppBar.medium(
                title: Text('Restaurant', style: TextStyle(fontWeight: FontWeight.bold)),
              ),

              if (provider.isLoading)
                const SliverFillRemaining(child: Center(child: CircularProgressIndicator()))
              else if (provider.error != null)
                SliverFillRemaining(child: Center(child: Text('Error: ${provider.error}')))
...
